@startuml
'https://plantuml.com/class-diagram

class Main {
+ static void main (String [] args)
}

class RickshawService {
- String [][] districts
- ArrayList <Driver> drivers

+ void createDriver (String name, int [] districtCoverage)
+ void bookDriver ()
- String findDriver (int districtNumber)
+ void fillDistrictsArray ()
}

class Driver {
- String name
- boolean isBooked
- int [] districtCoverage

+ Driver (String name, int [] districtCoverage)
+ boolean coverDistrict (int districtNumber)
}

Main *-- RickshawService
RickshawService *-- Driver


@enduml